[tool.poetry]
name = "root"
version = "0.0.0"
description = "RAG package."
authors = ["Anuj jalota <ajalota@nvidia.com>",
"Anup Aka <aaka@nvidia.com>",
"Bhavik Sharda <blaljisharda@nvidia.com>"
]


[tool.poetry.dependencies]
python = "==3.10.14"
ctransformers = "==0.2.26"
datasets = "==2.14.6"
docx2txt = "==0.8"
evaluate = "==0.4.*,>=0.4.1"
faiss-cpu = "==1.7.4"
flask = "==2.2.3"
flask-marshmallow = "==0.15.0"
flask-migrate = "==4.0.4"
gradio = "==4.26.0"
langsmith = "==0.1.47"
llama-index = "==0.9.27"
mpi4py = "==3.1.5"
numpy = "==1.24.0"
onnx = "==1.14.1"
pandas = "==2.0.3"
psutil = "==5.9.7"
pydantic = "==2.3.0"
pydantic-core = "==2.6.3"
pydantic-settings = "==2.0.3"
pymilvus = "==2.3.0"
pynvml = ">=11.5.0"
pypdf = "==3.17.4"
pypdf2 = "==3.0.1"
rouge-score = "==0.1.*,>=0.1.2"
sentence-transformers = "==2.2.2"
sentencepiece = "==0.1.*,==0.1.99,>=0.1.99"
tiktoken = "==0.3.3"
tokenizers = "==0.15.1"
transformers = "==4.36.2"
langchain = "==0.1.16"
soundfile = "==0.12.1"
strenum = "*"
